overflow issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw !important;
+  overflow-x: hidden;
+  height: auto;
 }
 #root{
   padding: 0 !important;
@@ -30,7 +33,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0 !important;
+  width: 100vw;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -108,8 +112,8 @@ button:focus-visible {
   transition: 0.3s;
 }
 .opened {
-  display: block !important;
-  width: 300px !important;
+  display: flex !important;
+  width: 350px !important;
   /* position: absolute !important; */
   z-index: 999;
   /* margin-left: 0;
